[gd_scene load_steps=2 format=3 uid="uid://c2gxsjplum3s0"]

[ext_resource type="Script" path="res://Hitboxes/interaction_manager.gd" id="1_bkejs"]

[node name="InteractionManager" type="Area2D"]
collision_layer = 16
collision_mask = 16
script = ExtResource("1_bkejs")

[node name="CollisionShape2d" type="CollisionShape2D" parent="."]

[connection signal="area_entered" from="." to="." method="_on_interaction_manager_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_interaction_manager_area_exited"]
